[tool.poetry]
name = "zephir_880_dataset"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
mysql-connector-python = "^8.4.0"
python-dotenv = "^1.0.1"
pandas = "^2.2.2"
pymarc = "^5.1.2"
isort = "^5.13.2"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
